--- a/src/components/searchbar/SearchBar.less
+++ b/src/components/searchbar/SearchBar.less
@@ -1,3 +1,5 @@
+@import "/static/css/mixins";
+
 .search-bar{
     display: inline-block;
     height: 26px;
@@ -10,10 +12,7 @@
         padding-left: 5px;
         position: relative;
         top: -1px;
-        border: none;
-        background: none;
-        outline-style: none;
-        -webkit-appearance: none;
+        .inputWithoutBorder;
     }
     .search-btn{
         display: inline-block;
